--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-4 py-3">
             <div class="flex items-center justify-between">
-                <a href="#" class="text-3xl font-['Pacifico'] text-primary">MotoShop</a>
+                <a href="index.html" class="text-3xl font-['Pacifico'] text-primary">MotoShop</a>
                 <div class="hidden md:flex items-center w-1/3 relative">
                     <input type="text" placeholder="Szukaj produktów..."
                         class="w-full py-2 px-4 rounded border border-gray-300 focus:outline-none focus:border-primary text-sm">
@@ -232,7 +232,7 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center mb-10">
                 <h2 class="text-3xl font-bold">Polecane produkty</h2>
-                <a href="https://readdy.ai/home/75b309ba-d11f-4116-99ad-0a9691952f9a/8a3be152-d9d9-41a0-975e-6d322d2d7420"
+                <a href="ProductCatalog.html"
                     data-readdy="true" class="text-primary font-medium flex items-center">
                     Zobacz wszystkie
                     <i class="ri-arrow-right-line ml-1"></i>
@@ -617,81 +617,6 @@
             </div>
         </div>
     </footer>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const menuToggle = document.querySelector('.ri-menu-line');
-            if (menuToggle) {
-                menuToggle.addEventListener('click', function () {
-                    alert('Menu mobilne zostanie zaimplementowane');
-                });
-            }
-
-            const cartIcon = document.getElementById('cartIcon');
-            const cartDropdown = document.getElementById('cartDropdown');
-            let isCartOpen = false;
-
-            document.addEventListener('click', function (event) {
-                if (cartIcon.contains(event.target)) {
-                    isCartOpen = !isCartOpen;
-                    cartDropdown.classList.toggle('hidden');
-                } else if (!cartDropdown.contains(event.target)) {
-                    isCartOpen = false;
-                    cartDropdown.classList.add('hidden');
-                }
-            });
-
-            window.updateQuantity = function (itemId, action) {
-                const item = document.querySelector([onclick *= "updateQuantity(${itemId}"]).closest('.cart-item');
-                const input = item.querySelector('input');
-                let value = parseInt(input.value);
-
-                if (action === 'increase') {
-                    value++;
-                } else if (action === 'decrease') {
-                    value = Math.max(1, value - 1);
-                } else if (action === 'input') {
-                    value = Math.max(1, value);
-                }
-
-                input.value = value;
-                updateCartTotal();
-            };
-
-            window.removeItem = function (itemId) {
-                const item = document.querySelector([onclick *= "removeItem(${itemId}"]).closest('.cart-item');
-                item.remove();
-                updateCartCount();
-                updateCartTotal();
-            };
-
-            function updateCartCount() {
-                const cartCount = document.getElementById('cartCount');
-                const itemCount = document.querySelectorAll('.cart-item').length;
-                cartCount.textContent = itemCount;
-                if (itemCount === 0) {
-                    cartDropdown.classList.add('hidden');
-                    isCartOpen = false;
-                }
-            }
-
-            function updateCartTotal() {
-                const items = document.querySelectorAll('.cart-item');
-                let total = 0;
-
-                items.forEach(item => {
-                    const price = parseInt(item.querySelector('.font-medium').textContent.replace(/[^\d]/g, ''));
-                    const quantity = parseInt(item.querySelector('input').value);
-                    total += price * quantity;
-                });
-
-                const totalElement = document.querySelector('.font-bold span:last-child');
-                totalElement.textContent = total.toLocaleString() + ' zł';
-
-                const subtotalElement = document.querySelector('.text-sm .font-medium:last-child');
-                subtotalElement.textContent = total.toLocaleString() + ' zł';
-            }
-        });
-    </script>
 </body>
-
+<script src="script.js"></script>
 </html>
