Added Used Motorcycles page and login page

--- a/ProductCatalog.html
+++ b/ProductCatalog.html
@@ -39,9 +39,9 @@
                 
                 <!-- Icons -->
                 <div class="flex items-center space-x-4">
-                    <div class="w-10 h-10 flex items-center justify-center cursor-pointer relative">
+                    <a href="login.html" class="w-10 h-10 flex items-center justify-center cursor-pointer relative">
                         <i class="ri-user-line text-gray-700 ri-lg"></i>
-                    </div>
+                    </a>
                     <div class="w-10 h-10 flex items-center justify-center cursor-pointer relative">
                         <i class="ri-heart-line text-gray-700 ri-lg"></i>
                         <span class="absolute -top-1 -right-1 bg-primary text-white text-xs rounded-full w-5 h-5 flex items-center justify-center">2</span>
