--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                     </div>
                 </div>
                 <nav class="hidden md:flex items-center space-x-6">
-                    <a href="#" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Sklep</a>
+                    <a href="ProductCatalog.html" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Sklep</a>
                     <a href="#" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Serwis</a>
-                    <a href="#" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Motocykle
+                    <a href="used-motorcycles.html" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Motocykle
                         Używane</a>
                     <a href="#" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Kontakt</a>
                 </nav>
                 <div class="flex items-center space-x-4">
-                    <div class="w-10 h-10 flex items-center justify-center cursor-pointer relative">
+                    <a href="login.html" class="w-10 h-10 flex items-center justify-center cursor-pointer relative">
                         <i class="ri-user-line text-gray-700 ri-lg"></i>
-                    </div>
+                    </a>
                     <div class="w-10 h-10 flex items-center justify-center cursor-pointer relative">
                         <i class="ri-heart-line text-gray-700 ri-lg"></i>
                         <span
