Improved filters in ProductCatalog.html and used-motorcycles.html

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <p class="text-lg text-white mb-8">Oferujemy najwyższej jakości części, akcesoria, serwis oraz motocykle
                     używane. Wszystko w jednym miejscu dla pasjonatów dwóch kółek.</p>
                 <div class="flex flex-wrap gap-4">
-                    <a href="#"
+                    <a href="ProductCatalog.html"
                         class="bg-primary text-white px-6 py-3 rounded-button font-medium hover:bg-opacity-90 transition whitespace-nowrap">Odwiedź
                         sklep</a>
                     <a href="#"
