Added Contact and Service Pages

--- a/ProductCatalog.html
+++ b/ProductCatalog.html
@@ -32,9 +32,9 @@
                 <!-- Navigation -->
                 <nav class="hidden md:flex items-center space-x-6">
                     <a href="ProductCatalog.html" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Sklep</a>
-                    <a href="#" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Serwis</a>
+                    <a href="service.html" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Serwis</a>
                     <a href="used-motorcycles.html" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Motocykle Używane</a>
-                    <a href="#" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Kontakt</a>
+                    <a href="contact.html" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Kontakt</a>
                 </nav>
                 
                 <!-- Icons -->
