--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 </div>
                 <nav class="hidden md:flex items-center space-x-6">
                     <a href="ProductCatalog.html" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Sklep</a>
-                    <a href="#" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Serwis</a>
+                    <a href="service.html" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Serwis</a>
                     <a href="used-motorcycles.html" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Motocykle
                         Używane</a>
-                    <a href="#" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Kontakt</a>
+                    <a href="contact.html" class="text-gray-700 hover:text-primary font-medium whitespace-nowrap">Kontakt</a>
                 </nav>
                 <div class="flex items-center space-x-4">
                     <a href="login.html" class="w-10 h-10 flex items-center justify-center cursor-pointer relative">
