Improved functionality of existing pages and added sitemap, terms of conditions and privacy pages

--- a/service.html
+++ b/service.html
@@ -48,6 +48,22 @@
                     <a href="used-motorcycles.html" class="text-gray-700 hover:text-primary font-medium">Motocykle Używane</a>
                     <a href="contact.html" class="text-gray-700 hover:text-primary font-medium">Kontakt</a>
                 </nav>
+                <div class="flex items-center space-x-4">
+                    <a href="login.html" class="w-10 h-10 flex items-center justify-center cursor-pointer relative">
+                        <i class="ri-user-line text-gray-700 ri-lg"></i>
+                    </a>
+                    <div class="w-10 h-10 flex items-center justify-center cursor-pointer relative">
+                        <i class="ri-heart-line text-gray-700 ri-lg"></i>
+                        <span class="absolute -top-1 -right-1 bg-primary text-white text-xs rounded-full w-5 h-5 flex items-center justify-center">2</span>
+                    </div>
+                    <div class="w-10 h-10 flex items-center justify-center cursor-pointer relative">
+                        <i class="ri-shopping-cart-line text-gray-700 ri-lg"></i>
+                        <span class="absolute -top-1 -right-1 bg-primary text-white text-xs rounded-full w-5 h-5 flex items-center justify-center">3</span>
+                    </div>
+                    <div class="md:hidden w-10 h-10 flex items-center justify-center cursor-pointer">
+                        <i class="ri-menu-line text-gray-700 ri-lg"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -423,22 +439,22 @@
                 <div>
                     <h3 class="text-xl font-bold mb-6">Sklep</h3>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Kaski</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Odzież</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Części</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Oleje i chemia</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Akcesoria</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Promocje</a></li>
+                        <li><a href="ProductCatalog.html?category=helmets" class="text-gray-400 hover:text-primary transition">Kaski</a></li>
+                        <li><a href="ProductCatalog.html?category=clothing" class="text-gray-400 hover:text-primary transition">Odzież</a></li>
+                        <li><a href="ProductCatalog.html?category=parts" class="text-gray-400 hover:text-primary transition">Części</a></li>
+                        <li><a href="ProductCatalog.html?category=oils" class="text-gray-400 hover:text-primary transition">Oleje i chemia</a></li>
+                        <li><a href="ProductCatalog.html?category=accessories" class="text-gray-400 hover:text-primary transition">Akcesoria</a></li>
+                        <li><a href="ProductCatalog.html?category=promotions" class="text-gray-400 hover:text-primary transition">Promocje</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-xl font-bold mb-6">Usługi</h3>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Serwis motocyklowy</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Przeglądy okresowe</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Motocykle używane</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Doradztwo techniczne</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Transport motocykli</a></li>
+                        <li><a href="service.html" class="text-gray-400 hover:text-white transition">Serwis motocyklowy</a></li>
+                        <li><a href="service.html" class="text-gray-400 hover:text-white transition">Przeglądy okresowe</a></li>
+                        <li><a href="service.html" class="text-gray-400 hover:text-white transition">Motocykle używane</a></li>
+                        <li><a href="service.html" class="text-gray-400 hover:text-white transition">Doradztwo techniczne</a></li>
+                        <li><a href="service.html" class="text-gray-400 hover:text-white transition">Transport motocykli</a></li>
                     </ul>
                 </div>
                 <div>
@@ -474,9 +490,9 @@
             <div class="pt-8 border-t border-gray-700 flex flex-col md:flex-row justify-between items-center">
                 <p class="text-gray-400 text-sm mb-4 md:mb-0">© 2025 MotoShop. Wszelkie prawa zastrzeżone.</p>
                 <div class="flex items-center space-x-4">
-                    <a href="#" class="text-gray-400 hover:text-white text-sm transition">Polityka prywatności</a>
-                    <a href="#" class="text-gray-400 hover:text-white text-sm transition">Regulamin</a>
-                    <a href="#" class="text-gray-400 hover:text-white text-sm transition">Mapa strony</a>
+                    <a href="privacy-policy.html" class="text-gray-400 hover:text-white text-sm transition">Polityka prywatności</a>
+                    <a href="terms.html" class="text-gray-400 hover:text-white text-sm transition">Regulamin</a>
+                    <a href="sitemap.html" class="text-gray-400 hover:text-white text-sm transition">Mapa strony</a>
                 </div>
                 <div class="flex items-center space-x-3 mt-4 md:mt-0">
                     <div class="w-8 h-5 flex items-center justify-center">
