--- a/used-motorcycles.html
+++ b/used-motorcycles.html
@@ -320,8 +320,20 @@
             <div class="pt-8 border-t border-gray-700 flex flex-col md:flex-row justify-between items-center">
                 <p class="text-gray-400 text-sm mb-4 md:mb-0">© 2025 MotoShop. Wszelkie prawa zastrzeżone.</p>
                 <div class="flex items-center space-x-4">
-                    <a href="#" class="text-gray-400 hover:text-white text-sm transition">Polityka prywatności</a>
-                    <a href="#" class="text-gray-400 hover:text-white text-sm transition">Regulamin</a>
+                    <a href="privacy-policy.html" class="text-gray-400 hover:text-white text-sm transition">Polityka prywatności</a>
+                    <a href="terms.html" class="text-gray-400 hover:text-white text-sm transition">Regulamin</a>
+                    <a href="sitemap.html" class="text-gray-400 hover:text-white text-sm transition">Mapa strony</a>
+                </div>
+                <div class="flex items-center space-x-3 mt-4 md:mt-0">
+                    <div class="w-8 h-5 flex items-center justify-center">
+                        <i class="ri-visa-fill text-gray-400 ri-lg"></i>
+                    </div>
+                    <div class="w-8 h-5 flex items-center justify-center">
+                        <i class="ri-mastercard-fill text-gray-400 ri-lg"></i>
+                    </div>
+                    <div class="w-8 h-5 flex items-center justify-center">
+                        <i class="ri-paypal-fill text-gray-400 ri-lg"></i>
+                    </div>
                 </div>
             </div>
         </div>
