--- a/login.html
+++ b/login.html
@@ -148,12 +148,12 @@
                 <div>
                     <h3 class="text-xl font-bold mb-6">Sklep</h3>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Kaski</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Odzież</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Części</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Oleje i chemia</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Akcesoria</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Promocje</a></li>
+                        <li><a href="ProductCatalog.html?category=helmets" class="text-gray-400 hover:text-primary transition">Kaski</a></li>
+                        <li><a href="ProductCatalog.html?category=clothing" class="text-gray-400 hover:text-primary transition">Odzież</a></li>
+                        <li><a href="ProductCatalog.html?category=parts" class="text-gray-400 hover:text-primary transition">Części</a></li>
+                        <li><a href="ProductCatalog.html?category=oils" class="text-gray-400 hover:text-primary transition">Oleje i chemia</a></li>
+                        <li><a href="ProductCatalog.html?category=accessories" class="text-gray-400 hover:text-primary transition">Akcesoria</a></li>
+                        <li><a href="ProductCatalog.html?category=promotions" class="text-gray-400 hover:text-primary transition">Promocje</a></li>
                     </ul>
                 </div>
                 <div>
@@ -199,9 +199,9 @@
             <div class="pt-8 border-t border-gray-700 flex flex-col md:flex-row justify-between items-center">
                 <p class="text-gray-400 text-sm mb-4 md:mb-0">© 2025 MotoShop. Wszelkie prawa zastrzeżone.</p>
                 <div class="flex items-center space-x-4">
-                    <a href="#" class="text-gray-400 hover:text-white text-sm transition">Polityka prywatności</a>
-                    <a href="#" class="text-gray-400 hover:text-white text-sm transition">Regulamin</a>
-                    <a href="#" class="text-gray-400 hover:text-white text-sm transition">Mapa strony</a>
+                    <a href="privacy-policy.html" class="text-gray-400 hover:text-white text-sm transition">Polityka prywatności</a>
+                    <a href="terms.html" class="text-gray-400 hover:text-white text-sm transition">Regulamin</a>
+                    <a href="sitemap.html" class="text-gray-400 hover:text-white text-sm transition">Mapa strony</a>
                 </div>
                 <div class="flex items-center space-x-3 mt-4 md:mt-0">
                     <div class="w-8 h-5 flex items-center justify-center">
