--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,7 +17,7 @@
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-4 py-3">
             <div class="flex items-center justify-between">
-                <a href="index.html" class="text-3xl font-['Pacifico'] text-primary">MotoShop</a>
+                <a href="index.php" class="text-3xl font-['Pacifico'] text-primary">MotoShop</a>
                 <nav class="hidden md:flex items-center space-x-6">
                     <a href="ProductCatalog.html" class="text-gray-700 hover:text-primary font-medium">Sklep</a>
                     <a href="service.html" class="text-gray-700 hover:text-primary font-medium">Serwis</a>
