--- a/sitemap.html
+++ b/sitemap.html
@@ -12,12 +12,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
     <link rel="stylesheet" href="mainStyles.css">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        main {
+            flex: 1 0 auto;
+        }
+        footer {
+            flex-shrink: 0;
+            margin-top: auto;
+        }
+    </style>
 </head>
 <body class="bg-gray-50">
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-4 py-3">
             <div class="flex items-center justify-between">
-                <a href="index.html" class="text-3xl font-['Pacifico'] text-primary">MotoShop</a>
+                <a href="index.php" class="text-3xl font-['Pacifico'] text-primary">MotoShop</a>
                 <nav class="hidden md:flex items-center space-x-6">
                     <a href="ProductCatalog.html" class="text-gray-700 hover:text-primary font-medium">Sklep</a>
                     <a href="service.html" class="text-gray-700 hover:text-primary font-medium">Serwis</a>
